--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,50 +4,46 @@
     "type": "split",
     "children": [
       {
-        "id": "3caad3e3628a18b0",
+        "id": "bb2ebec5221964bd",
         "type": "leaf",
         "pane-relief:history-v1": {
           "pos": 0,
           "stack": [
             {
-              "leaf": "3caad3e3628a18b0",
+              "leaf": "bb2ebec5221964bd",
               "group": null,
-<<<<<<< HEAD
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/Trigonometric Function.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "de04a071d3e98092",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/Maths Cheat sheet.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":1,\"ch\":2},\"to\":{\"line\":1,\"ch\":2}}}"
-            },
-            {
-              "leaf": "de04a071d3e98092",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/index.md\",\"mode\":\"preview\",\"source\":false}}",
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/Trigonometric Functions.md\",\"mode\":\"preview\",\"source\":false}}",
               "eState": "{\"scroll\":0}"
-            },
-            {
-              "leaf": "de04a071d3e98092",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"about.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"scroll\":2.074194850068559}"
-=======
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/Tools of Blender.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":30,\"ch\":338},\"to\":{\"line\":30,\"ch\":338}},\"scroll\":0.15962231599448892}"
->>>>>>> parent of 4859f48 (CSS Theme switcher (please work))
             }
           ]
         },
         "state": {
           "type": "markdown",
           "state": {
-<<<<<<< HEAD
-            "file": "notes/Trigonometric Function.md",
-=======
-            "file": "notes/Tools of Blender.md",
->>>>>>> parent of 4859f48 (CSS Theme switcher (please work))
+            "file": "notes/Trigonometric Functions.md",
+            "mode": "preview",
+            "source": false
+          }
+        }
+      },
+      {
+        "id": "3bfb253936d7acc1",
+        "type": "leaf",
+        "pane-relief:history-v1": {
+          "pos": 0,
+          "stack": [
+            {
+              "leaf": "3bfb253936d7acc1",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/Probability.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}},\"scroll\":0}"
+            }
+          ]
+        },
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "notes/Probability.md",
             "mode": "source",
             "source": false
           }
@@ -99,8 +95,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 238.5,
-    "collapsed": true
+    "width": 238.5
   },
   "right": {
     "id": "6e6bed1067815e25",
@@ -132,11 +127,7 @@
             "state": {
               "type": "backlink",
               "state": {
-<<<<<<< HEAD
-                "file": "notes/Trigonometric Function.md",
-=======
-                "file": "notes/Tools of Blender.md",
->>>>>>> parent of 4859f48 (CSS Theme switcher (please work))
+                "file": "notes/Probability.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -157,11 +148,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-<<<<<<< HEAD
-                "file": "notes/Trigonometric Function.md",
-=======
-                "file": "notes/Tools of Blender.md",
->>>>>>> parent of 4859f48 (CSS Theme switcher (please work))
+                "file": "notes/Probability.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -183,13 +170,9 @@
             "state": {
               "type": "localgraph",
               "state": {
-<<<<<<< HEAD
-                "file": "notes/Trigonometric Function.md",
-=======
-                "file": "notes/Tools of Blender.md",
->>>>>>> parent of 4859f48 (CSS Theme switcher (please work))
+                "file": "notes/Probability.md",
                 "options": {
-                  "collapse-filter": true,
+                  "collapse-filter": false,
                   "search": "",
                   "localJumps": 3,
                   "localBacklinks": true,
@@ -198,7 +181,7 @@
                   "showTags": false,
                   "showAttachments": false,
                   "hideUnresolved": false,
-                  "collapse-color-groups": true,
+                  "collapse-color-groups": false,
                   "colorGroups": [
                     {
                       "query": "tag:#raw",
@@ -218,7 +201,7 @@
                   "repelStrength": 20,
                   "linkStrength": 1,
                   "linkDistance": 250,
-                  "scale": 0.24835252748495212,
+                  "scale": 0.547116336308624,
                   "close": true
                 }
               }
@@ -230,29 +213,20 @@
     "direction": "horizontal",
     "width": 446.10455322265625
   },
-  "active": "3caad3e3628a18b0",
+  "active": "3bfb253936d7acc1",
   "ophidian:layout-settings": {
     "pane-relief:focus-lock": true
   },
   "lastOpenFiles": [
-<<<<<<< HEAD
-    "notes/Maths Cheat sheet.md",
+    "notes/Trigonometric Functions.md",
+    "notes/Probability.md",
+    "assets/A-prime.png",
+    "assets/A-cup-B.png",
+    "assets/A-cap-B.png",
+    "rushmode.md",
     "notes/index.md",
-=======
->>>>>>> parent of 4859f48 (CSS Theme switcher (please work))
-    "about.md",
-    "Template/Inline Image.md",
+    "notes/Maths Cheat sheet.md",
     "notes/Tools of Blender.md",
-    "Template/Image Template.md",
-    "notes/Aboriginal Spirituality.md",
-    "notes/Different, Not Rudimentary.md",
-    "notes/Overview of Oceania by A. P. Elkin.md",
-<<<<<<< HEAD
-    "roadmap.md"
-=======
-    "roadmap.md",
-    "notes/MathJax.md",
-    "notes/Greenhouse Effect.md"
->>>>>>> parent of 4859f48 (CSS Theme switcher (please work))
+    "about.md"
   ]
 }
