--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,40 +4,17 @@
     "type": "split",
     "children": [
       {
-        "id": "cdbd35f0b5439bac",
-        "type": "leaf",
-        "pane-relief:history-v1": {
-          "pos": 0,
-          "stack": [
-            {
-              "leaf": "cdbd35f0b5439bac",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/Testing.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":6,\"ch\":12},\"to\":{\"line\":6,\"ch\":12}}}"
-            },
-            {
-              "leaf": "cdbd35f0b5439bac",
-              "group": null,
-              "state": "{\"type\":\"graph\",\"state\":{}}",
-              "eState": "{}"
-            }
-          ]
-        },
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "notes/Testing.md",
-            "mode": "source",
-            "source": false
-          }
-        }
-      },
-      {
         "id": "6938228db9c9522a",
         "type": "leaf",
         "pane-relief:history-v1": {
           "pos": 0,
           "stack": [
+            {
+              "leaf": "6938228db9c9522a",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"index.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":9,\"ch\":114},\"to\":{\"line\":9,\"ch\":123}}}"
+            },
             {
               "leaf": "6938228db9c9522a",
               "group": null,
@@ -49,8 +26,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "notes/Images.md",
-            "mode": "preview",
+            "file": "index.md",
+            "mode": "source",
             "source": false
           }
         }
@@ -135,7 +112,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "notes/Images.md",
+                "file": "index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -156,7 +133,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "notes/Images.md",
+                "file": "index.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -178,7 +155,7 @@
             "state": {
               "type": "localgraph",
               "state": {
-                "file": "notes/Images.md",
+                "file": "index.md",
                 "options": {
                   "collapse-filter": false,
                   "search": "",
@@ -241,14 +218,14 @@
   },
   "lastOpenFiles": [
     "notes/Testing.md",
+    "index.md",
+    "notes/Images.md",
     "CONTRIBUTING.md",
     "README.md",
     "roadmap.md",
     "rushmode.md",
     "notes/Probability.md",
-    "index.md",
     "notes/index.md",
-    "about.md",
-    "notes/Maths Cheat sheet.md"
+    "about.md"
   ]
 }
